--- a/theme/contact.html
+++ b/theme/contact.html
@@ -311,7 +311,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <nav aria-label="breadcrumb">
                     <ol class="breadcrumb justify-content-center">
                       <li class="breadcrumb-item"><a href="#">Home</a></li>
-                      <li class="breadcrumb-item"><a href="#">Company</a></li>
+                      <!-- <li class="breadcrumb-item"><a href="#">Company</a></li> -->
                       <li class="breadcrumb-item active" aria-current="page">
                         Contact Us
                       </li>
