--- a/theme/index.html
+++ b/theme/index.html
@@ -860,7 +860,7 @@ FACEBOOK: https://www.facebook.com/themefisher
       </section>
       <!-- Service end -->
 
-      <section id="project-area" class="project-area solid-bg">
+      <section id="main-container" class="main-container">
         <div class="container">
           <div class="row">
             <div class="col-12">
@@ -1130,7 +1130,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                 </div>
                 <!-- shuffle item 6 end -->
                 <div
-                  class="col-lg-4 col-md-6 shuffle-item"
+                  class="col-lg-4 col-md-6 shuffle-item hidden-project"
                   data-groups='["Industrial"]'
                 >
                   <div class="project-img-container">
@@ -1159,7 +1159,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                 </div>
                 <div
-                  class="col-lg-4 col-md-6 shuffle-item"
+                  class="col-lg-4 col-md-6 shuffle-item hidden-project"
                   data-groups='["Industrial"]'
                 >
                   <div class="project-img-container">
@@ -1188,7 +1188,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                 </div>
                 <div
-                  class="col-lg-4 col-md-6 shuffle-item"
+                  class="col-lg-4 col-md-6 shuffle-item hidden-project"
                   data-groups='["Residential"]'
                 >
                   <div class="project-img-container">
@@ -1219,7 +1219,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                 </div>
                 <div
-                  class="col-lg-4 col-md-6 shuffle-item"
+                  class="col-lg-4 col-md-6 shuffle-item hidden-project"
                   data-groups='["tp"]'
                 >
                   <div class="project-img-container">
@@ -1250,7 +1250,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                 </div>
                 <div
-                  class="col-lg-4 col-md-6 shuffle-item"
+                  class="col-lg-4 col-md-6 shuffle-item hidden-project"
                   data-groups='["ld"]'
                 >
                   <div class="project-img-container">
@@ -1279,7 +1279,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                 </div>
                 <div
-                  class="col-lg-4 col-md-6 shuffle-item"
+                  class="col-lg-4 col-md-6 shuffle-item hidden-project"
                   data-groups='["pp"]'
                 >
                   <div class="project-img-container">
@@ -1308,7 +1308,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                 </div>
                 <div
-                  class="col-lg-4 col-md-6 shuffle-item"
+                  class="col-lg-4 col-md-6 shuffle-item hidden-project"
                   data-groups='["videos"]'
                 >
                   <div>
@@ -1326,7 +1326,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                 </div>
                 <div
-                  class="col-lg-4 col-md-6 shuffle-item"
+                  class="col-lg-4 col-md-6 shuffle-item hidden-project"
                   data-groups='["videos"]'
                 >
                   <div>
@@ -1343,7 +1343,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                 </div>
                 <div
-                  class="col-lg-4 col-md-6 shuffle-item"
+                  class="col-lg-4 col-md-6 shuffle-item hidden-project"
                   data-groups='["videos"]'
                 >
                   <div>
@@ -1360,7 +1360,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                 </div>
                 <div
-                  class="col-lg-4 col-md-6 shuffle-item"
+                  class="col-lg-4 col-md-6 shuffle-item hidden-project"
                   data-groups='["videos"]'
                 >
                   <div>
@@ -1377,7 +1377,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                 </div>
                 <div
-                  class="col-lg-4 col-md-6 shuffle-item"
+                  class="col-lg-4 col-md-6 shuffle-item hidden-project"
                   data-groups='["videos"]'
                 >
                   <div>
@@ -1394,7 +1394,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                 </div>
                 <div
-                  class="col-lg-4 col-md-6 shuffle-item"
+                  class="col-lg-4 col-md-6 shuffle-item hidden-project"
                   data-groups='["videos"]'
                 >
                   <div>
@@ -1411,7 +1411,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                 </div>
                 <div
-                  class="col-lg-4 col-md-6 shuffle-item"
+                  class="col-lg-4 col-md-6 shuffle-item hidden-project"
                   data-groups='["videos"]'
                 >
                   <div>
@@ -1428,7 +1428,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                 </div>
                 <div
-                  class="col-lg-4 col-md-6 shuffle-item"
+                  class="col-lg-4 col-md-6 shuffle-item hidden-project"
                   data-groups='["videos"]'
                 >
                   <div>
@@ -1445,7 +1445,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                 </div>
                 <div
-                  class="col-lg-4 col-md-6 shuffle-item"
+                  class="col-lg-4 col-md-6 shuffle-item hidden-project"
                   data-groups='["videos"]'
                 >
                   <div>
@@ -1462,7 +1462,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                 </div>
                 <div
-                  class="col-lg-4 col-md-6 shuffle-item"
+                  class="col-lg-4 col-md-6 shuffle-item hidden-project"
                   data-groups='["videos"]'
                 >
                   <div>
@@ -1479,7 +1479,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                 </div>
                 <div
-                  class="col-lg-4 col-md-6 shuffle-item"
+                  class="col-lg-4 col-md-6 shuffle-item hidden-project"
                   data-groups='["videos"]'
                 >
                   <div>
@@ -1496,7 +1496,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                 </div>
                 <div
-                  class="col-lg-4 col-md-6 shuffle-item"
+                  class="col-lg-4 col-md-6 shuffle-item hidden-project"
                   data-groups='["videos"]'
                 >
                   <div>
@@ -1526,7 +1526,7 @@ FACEBOOK: https://www.facebook.com/themefisher
           </div>
           <!-- Content row end -->
         </div>
-        <!--/ Container end -->
+        <!-- Conatiner end -->
       </section>
       <!-- Project area end -->
       <div id="loader" class="loader"></div>
@@ -2164,7 +2164,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 
         <div class="copyright">
           <div class="container">
-            <div class="row align-items-center">
+            <div class="row align-items-center justify-content-center">
               <div class="col-md-6">
                 <div class="copyright-info">
                   <span
@@ -2173,37 +2173,27 @@ FACEBOOK: https://www.facebook.com/themefisher
                       document.write(new Date().getFullYear());
                     </script>
                     , Designed &amp; Developed by
-                    <a href="https://themefisher.com">Themefisher</a></span
+                    <a href="https://www.linkedin.com/in/mohammedp-sd/"
+                      >MakeWithMrx</a
+                    ></span
                   >
                 </div>
               </div>
+              <!-- Row end -->
 
-              <div class="col-md-6">
-                <div class="footer-menu text-center text-md-right">
-                  <ul class="list-arrow">
-                    <li>Pre-Construction</li>
-                    <li>General Contracting</li>
-                    <li>Construction Management</li>
-                    <li>Design and Build</li>
-                    <li>Self-Perform Construction</li>
-                  </ul>
-                </div>
+              <div
+                id="back-to-top"
+                data-spy="affix"
+                data-offset-top="10"
+                class="back-to-top position-fixed"
+              >
+                <button class="btn btn-primary" title="Back to Top">
+                  <i class="fa fa-angle-double-up"></i>
+                </button>
               </div>
             </div>
-            <!-- Row end -->
-
-            <div
-              id="back-to-top"
-              data-spy="affix"
-              data-offset-top="10"
-              class="back-to-top position-fixed"
-            >
-              <button class="btn btn-primary" title="Back to Top">
-                <i class="fa fa-angle-double-up"></i>
-              </button>
-            </div>
+            <!-- Container end -->
           </div>
-          <!-- Container end -->
         </div>
         <!-- Copyright end -->
       </footer>
@@ -2213,28 +2203,20 @@ FACEBOOK: https://www.facebook.com/themefisher
   ================================================== -->
 
       <script>
-        document.addEventListener("DOMContentLoaded", function () {
-          const viewAllButton = document.getElementById("view-all-projects");
-          const shuffleItems = document.querySelectorAll(".shuffle-item");
-          const loader = document.getElementById("loader");
-
-          viewAllButton.addEventListener("click", function (e) {
+        document
+          .getElementById("view-all-projects")
+          .addEventListener("click", function (e) {
             e.preventDefault();
-
-            // Show the loader
-            viewAllButton.style.display = "none";
+            // Show hidden projects
+            var hiddenProjects = document.querySelectorAll(".hidden-project");
+            const loader = document.getElementById("loader");
+            hiddenProjects.forEach(function (project) {
+              project.classList.remove("hidden-project");
+            });
             loader.style.display = "block";
-
-            // Simulate loading delay
-            setTimeout(() => {
-              // Display all items
-              shuffleItems.forEach((item) => (item.style.display = "block"));
-
-              // Hide the loader
-              loader.style.display = "none";
-            }, 1000); // Simulated delay time in milliseconds
+            // Hide the "Load More" button
+            this.style.display = "none";
           });
-        });
       </script>
       <!-- initialize jQuery Library -->
       <script src="plugins/jQuery/jquery.min.js"></script>
