--- a/theme/services.html
+++ b/theme/services.html
@@ -451,35 +451,36 @@ FACEBOOK: https://www.facebook.com/themefisher
 
     <div class="copyright">
       <div class="container">
-        <div class="row align-items-center">
+        <div class="row align-items-center justify-content-center">
           <div class="col-md-6">
             <div class="copyright-info">
-              <span>Copyright &copy; <script>
-                  document.write(new Date().getFullYear())
-                </script>, Designed &amp; Developed by <a href="https://themefisher.com">Themefisher</a></span>
+              <span
+                >Copyright &copy;
+                <script>
+                  document.write(new Date().getFullYear());
+                </script>
+                , Designed &amp; Developed by
+                <a href="https://www.linkedin.com/in/mohammedp-sd/"
+                  >MakeWithMrx</a
+                ></span
+              >
             </div>
           </div>
+          <!-- Row end -->
 
-          <div class="col-md-6">
-            <div class="footer-menu text-center text-md-right">
-              <ul class="list-unstyled">
-                <li><a href="about.html">About</a></li>
-                <li><a href="team.html">Our people</a></li>
-                <li><a href="faq.html">Faq</a></li>
-                <li><a href="news-left-sidebar.html">Blog</a></li>
-                <li><a href="pricing.html">Pricing</a></li>
-              </ul>
-            </div>
+          <div
+            id="back-to-top"
+            data-spy="affix"
+            data-offset-top="10"
+            class="back-to-top position-fixed"
+          >
+            <button class="btn btn-primary" title="Back to Top">
+              <i class="fa fa-angle-double-up"></i>
+            </button>
           </div>
-        </div><!-- Row end -->
-
-        <div id="back-to-top" data-spy="affix" data-offset-top="10" class="back-to-top position-fixed">
-          <button class="btn btn-primary" title="Back to Top">
-            <i class="fa fa-angle-double-up"></i>
-          </button>
         </div>
-
-      </div><!-- Container end -->
+        <!-- Container end -->
+      </div>
     </div><!-- Copyright end -->
   </footer><!-- Footer end -->
 
