send mail script, minor changes-2, stats changed

--- a/theme/services.html
+++ b/theme/services.html
@@ -301,8 +301,8 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <img loading="lazy" src="images/icon-image/service-icon1.png" alt="service-icon">
               </div>
               <div class="ts-service-info">
-                  <h3 class="service-box-title"><a href="service-single.html">Zero Harm Everyday</a></h3>
-                  <p>You have ideas, goals, and dreams. We have a culturally diverse, forward thinking team looking for talent like. Lorem ipsum dolor suscipit.</p>
+                  <h3 class="service-box-title"><a href="#">Zero Harm Everyday</a></h3>
+                  <p>At Elephanta, we prioritize the well-being of our workforce and the communities we serve. Our commitment to "Zero Harm Everyday" ensures that safety is at the forefront of every project, fostering a culture of vigilance and care.</p>
                   <!-- <a class="learn-more d-inline-block" href="service-single.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Learn more</a> -->
               </div>
             </div>
@@ -319,8 +319,8 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <img loading="lazy" src="images/icon-image/service-icon2.png" alt="service-icon">
               </div>
               <div class="ts-service-info">
-                  <h3 class="service-box-title"><a href="service-single.html">Virtual Construction</a></h3>
-                  <p>You have ideas, goals, and dreams. We have a culturally diverse, forward thinking team looking for talent like. Lorem ipsum dolor suscipit.</p>
+                  <h3 class="service-box-title"><a href="#">Virtual Construction</a></h3>
+                  <p>Leveraging cutting-edge technology, Elephanta embraces virtual construction methodologies to streamline project planning and execution. This approach enhances precision, reduces waste, and improves overall efficiency.</p>
                   <!-- <a class="learn-more d-inline-block" href="service-single.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Learn more</a> -->
               </div>
             </div>
@@ -337,8 +337,8 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <img loading="lazy" src="images/icon-image/service-icon3.png" alt="service-icon">
               </div>
               <div class="ts-service-info">
-                  <h3 class="service-box-title"><a href="service-single.html">Build To Last</a></h3>
-                  <p>You have ideas, goals, and dreams. We have a culturally diverse, forward thinking team looking for talent like. Lorem ipsum dolor suscipit.</p>
+                  <h3 class="service-box-title"><a href="#">Build To Last</a></h3>
+                  <p>Elephanta's dedication to quality craftsmanship ensures that every structure we build is designed to withstand the test of time. Our "Build to Last" philosophy reflects our commitment to durability and excellence in every project.</p>
                   <!-- <a class="learn-more d-inline-block" href="service-single.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Learn more</a> -->
               </div>
             </div>
@@ -355,8 +355,8 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <img loading="lazy" src="images/icon-image/service-icon4.png" alt="service-icon">
               </div>
               <div class="ts-service-info">
-                  <h3 class="service-box-title"><a href="service-single.html">EXTERIOR DESIGN</a></h3>
-                  <p>You have ideas, goals, and dreams. We have a culturally diverse, forward thinking team looking for talent like. Lorem ipsum dolor suscipit.</p>
+                  <h3 class="service-box-title"><a href="#">EXTERIOR DESIGN</a></h3>
+                  <p>Our expertise in exterior design blends aesthetics with functionality, creating visually stunning and enduring facades. Elephanta's designs are tailored to complement the environment while meeting the highest standards of quality.</p>
                   <!-- <a class="learn-more d-inline-block" href="service-single.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Learn more</a> -->
               </div>
             </div>
@@ -373,8 +373,8 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <img loading="lazy" src="images/icon-image/service-icon5.png" alt="service-icon">
               </div>
               <div class="ts-service-info">
-                  <h3 class="service-box-title"><a href="service-single.html">RENOVATION</a></h3>
-                  <p>You have ideas, goals, and dreams. We have a culturally diverse, forward thinking team looking for talent like. Lorem ipsum dolor suscipit.</p>
+                  <h3 class="service-box-title"><a href="#">RENOVATION</a></h3>
+                  <p>Elephanta specializes in transforming spaces through meticulous renovation services. Whether upgrading existing structures or repurposing facilities, our team delivers innovative solutions that breathe new life into any project.</p>
                   <!-- <a class="learn-more d-inline-block" href="service-single.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Learn more</a> -->
               </div>
             </div>
@@ -391,8 +391,8 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <img loading="lazy" src="images/icon-image/service-icon6.png" alt="service-icon">
               </div>
               <div class="ts-service-info">
-                  <h3 class="service-box-title"><a href="service-single.html">SAFETY MANAGEMENT</a></h3>
-                  <p>You have ideas, goals, and dreams. We have a culturally diverse, forward thinking team looking for talent like. Lorem ipsum dolor suscipit.</p>
+                  <h3 class="service-box-title"><a href="#">SAFETY MANAGEMENT</a></h3>
+                  <p>Elephanta implements robust safety management practices to ensure every project is executed without incident. Our comprehensive safety protocols and continuous training programs underscore our unwavering commitment to a secure working environment.</p>
                   <!-- <a class="learn-more d-inline-block" href="service-single.html" aria-label="service-details"><i class="fa fa-caret-right"></i> Learn more</a> -->
               </div>
             </div>
