--- a/theme/index.html
+++ b/theme/index.html
@@ -660,7 +660,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                 </div>
                 <div class="ts-facts-content">
                   <h2 class="ts-facts-num">
-                    <span class="counterUp" data-count="647">0</span>
+                    <span class="counterUp" data-count="1583">0</span>
                   </h2>
                   <h3 class="ts-facts-title">Staff Members</h3>
                 </div>
@@ -696,7 +696,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <h2 class="ts-facts-num">
                     <span class="counterUp" data-count="44">0</span>
                   </h2>
-                  <h3 class="ts-facts-title">Countries Experience</h3>
+                  <h3 class="ts-facts-title">Cities Experience</h3>
                 </div>
               </div>
               <!-- Col end -->
