stage push-1, without socials

--- a/theme/index.html
+++ b/theme/index.html
@@ -734,8 +734,10 @@ FACEBOOK: https://www.facebook.com/themefisher
                     <a href="#">Home Construction</a>
                   </h3>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit
-                    Integer adipiscing erat
+                    Elephanta constructs homes tailored to local needs,
+                    including apartments, row houses, and twin bungalows. We
+                    focus on quality, comfort, and delivering excellent
+                    residential spaces.
                   </p>
                 </div>
               </div>
@@ -754,8 +756,10 @@ FACEBOOK: https://www.facebook.com/themefisher
                     <a href="#">Building Remodels</a>
                   </h3>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit
-                    Integer adipiscing erat
+                    We transform existing buildings with our remodeling
+                    services, enhancing functionality and aesthetics. Elephanta
+                    ensures each remodel meets high standards of quality and
+                    customer satisfaction.
                   </p>
                 </div>
               </div>
@@ -774,8 +778,10 @@ FACEBOOK: https://www.facebook.com/themefisher
                     <a href="#">Interior Design</a>
                   </h3>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit
-                    Integer adipiscing erat
+                    Our interior design services blend modern trends with
+                    practical solutions, creating beautiful and functional
+                    living spaces. Elephanta prioritizes both aesthetics and
+                    livability in every project.
                   </p>
                 </div>
               </div>
@@ -787,7 +793,7 @@ FACEBOOK: https://www.facebook.com/themefisher
               <img
                 loading="lazy"
                 class="img-fluid"
-                src="images/services/service-center.jpg"
+                src="images/services/service-center-1.jpg"
                 alt="service-avater-image"
               />
             </div>
@@ -807,8 +813,9 @@ FACEBOOK: https://www.facebook.com/themefisher
                     <a href="#">Exterior Design</a>
                   </h3>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit
-                    Integer adipiscing erat
+                    Elephanta's exterior design enhances the visual appeal and
+                    durability of buildings. We create attractive and lasting
+                    exteriors that reflect our clients' unique styles and needs.
                   </p>
                 </div>
               </div>
@@ -825,8 +832,10 @@ FACEBOOK: https://www.facebook.com/themefisher
                 <div class="ts-service-box-info">
                   <h3 class="service-box-title"><a href="#">Renovation</a></h3>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit
-                    Integer adipiscing erat
+                    Elephanta's renovation services revitalize existing
+                    structures with minimal disruption. We improve functionality
+                    and aesthetics, ensuring timely completion and high-quality
+                    results.
                   </p>
                 </div>
               </div>
@@ -845,8 +854,9 @@ FACEBOOK: https://www.facebook.com/themefisher
                     <a href="#">Safety Management</a>
                   </h3>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit
-                    Integer adipiscing erat
+                    Safety is paramount at Elephanta. We implement strict safety
+                    protocols and continuous training to maintain a hazard-free
+                    environment, aiming for zero harm every day.
                   </p>
                 </div>
               </div>
@@ -1910,7 +1920,7 @@ FACEBOOK: https://www.facebook.com/themefisher
       </section>
       <!-- Content end -->
 
-      <section class="subscribe no-padding">
+      <!-- <section class="subscribe no-padding">
         <div class="container">
           <div class="row">
             <div class="col-lg-4">
@@ -1919,7 +1929,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                 <h4>(+9) 847-291-4353</h4>
               </div>
             </div>
-            <!-- Col end -->
+             Col end 
 
             <div class="col-lg-8">
               <div class="ts-newsletter row align-items-center">
@@ -1946,17 +1956,17 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </form>
                 </div>
               </div>
-              <!-- Newsletter end -->
+               Newsletter end 
             </div>
-            <!-- Col end -->
+             Col end
           </div>
-          <!-- Content row end -->
+          <!- Content row end
         </div>
-        <!--/ Container end -->
+        <!-/ Container end
       </section>
-      <!--/ subscribe end -->
+      < subscribe end -->
 
-      <section id="news" class="news">
+      <!-- <section id="news" class="news">
         <div class="container">
           <div class="row text-center">
             <div class="col-12">
@@ -1964,7 +1974,7 @@ FACEBOOK: https://www.facebook.com/themefisher
               <h3 class="section-sub-title">Recent Projects</h3>
             </div>
           </div>
-          <!--/ Title row end -->
+          </ Title row end 
 
           <div class="row">
             <div class="col-lg-4 col-md-6 mb-4">
@@ -1993,9 +2003,9 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                 </div>
               </div>
-              <!-- Latest post end -->
+               Latest post end 
             </div>
-            <!-- 1st post col end -->
+            < 1st post col end 
 
             <div class="col-lg-4 col-md-6 mb-4">
               <div class="latest-post">
@@ -2023,9 +2033,9 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                 </div>
               </div>
-              <!-- Latest post end -->
+              Latest post end 
             </div>
-            <!-- 2nd post col end -->
+            2nd post col end 
 
             <div class="col-lg-4 col-md-6 mb-4">
               <div class="latest-post">
@@ -2053,11 +2063,11 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                 </div>
               </div>
-              <!-- Latest post end -->
+               Latest post end
             </div>
-            <!-- 3rd post col end -->
+             3rd post col end
           </div>
-          <!--/ Content row end -->
+          / Content row end -
 
           <div class="general-btn text-center mt-4">
             <a class="btn btn-primary" href="news-left-sidebar.html"
@@ -2065,9 +2075,9 @@ FACEBOOK: https://www.facebook.com/themefisher
             >
           </div>
         </div>
-        <!--/ Container end -->
-      </section>
-      <!--/ News end -->
+        / Container end
+      </section> 
+       News end -->
 
       <footer id="footer" class="footer bg-overlay">
         <div class="footer-main">
