additional number and email added

--- a/404.html
+++ b/404.html
@@ -126,7 +126,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                     <div class="info-box">
                       <div class="info-box-content">
                           <p class="info-box-title">Email Us</p>
-                          <p class="info-box-subtitle">info.elephanta@gmail.com</p>
+                          <p class="info-box-subtitle">info.elephanta@gmail.com, 9879593339c@gmail.com</p>
                       </div>
                     </div>
                   </li>
