--- a/about.html
+++ b/about.html
@@ -157,7 +157,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                       <div class="info-box">
                         <div class="info-box-content">
                           <p class="info-box-title">Call Us</p>
-                          <p class="info-box-subtitle">(+91) 98795-93339</p>
+                          <p class="info-box-subtitle">(+91) 98795-93339, (+91) 96383-25676</p>
                         </div>
                       </div>
                     </li>
@@ -166,7 +166,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                         <div class="info-box-content">
                           <p class="info-box-title">Email Us</p>
                           <p class="info-box-subtitle">
-                            info.elephanta@gmail.com
+                            info.elephanta@gmail.com, 9879593339c@gmail.com
                           </p>
                         </div>
                       </div>
@@ -456,7 +456,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                 </div>
                 <div class="ts-facts-content">
                   <h2 class="ts-facts-num">
-                    <span class="counterUp" data-count="647">0</span>
+                    <span class="counterUp" data-count="1583">0</span>
                   </h2>
                   <h3 class="ts-facts-title">Staff Members</h3>
                 </div>
@@ -492,7 +492,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <h2 class="ts-facts-num">
                     <span class="counterUp" data-count="44">0</span>
                   </h2>
-                  <h3 class="ts-facts-title">Countries Experience</h3>
+                  <h3 class="ts-facts-title">Cities Experience</h3>
                 </div>
               </div>
               <!-- Col end -->
@@ -890,11 +890,11 @@ FACEBOOK: https://www.facebook.com/themefisher
                   Contact us if you have an emergency, with our Hotline and
                   Contact form.
                   <br /><br />
-                  Monday - Friday:
+                  <!-- Monday - Friday:
                   <span class="text-right">10:00 - 16:00 </span> <br />
                   Saturday: <span class="text-right">12:00 - 15:00</span> <br />
                   Sunday and holidays:
-                  <span class="text-right">09:00 - 12:00</span>
+                  <span class="text-right">09:00 - 12:00</span> -->
                 </div>
               </div>
               <!-- Col end -->
