--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,8 @@ FACEBOOK: https://www.facebook.com/themefisher
                         <div class="info-box-content">
                           <p class="info-box-title">Email Us</p>
                           <p class="info-box-subtitle">
-                            info.elephanta@gmail.com
+                            info.elephanta@gmail.com,
+                            9879593339c@gmail.com
                           </p>
                         </div>
                       </div>
@@ -363,7 +364,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                 </span>
                 <div class="ts-service-box-content">
                   <h4>Email Us</h4>
-                  <p>info.elephanta@gmail.com</p>
+                  <p>info.elephanta@gmail.com, 9879593339c@gmail.com</p>
                 </div>
               </div>
             </div>
@@ -376,7 +377,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                 </span>
                 <div class="ts-service-box-content">
                   <h4>Call Us</h4>
-                  <p>(+91) 98795-93339</p>
+                  <p>(+91) 98795-93339, (+91) 96383-25676</p>
                 </div>
               </div>
             </div>
@@ -540,11 +541,11 @@ FACEBOOK: https://www.facebook.com/themefisher
                   Contact us if you have an emergency, with our Hotline and
                   Contact form.
                   <br /><br />
-                  Monday - Friday:
+                  <!-- Monday - Friday:
                   <span class="text-right">10:00 - 16:00 </span> <br />
                   Saturday: <span class="text-right">12:00 - 15:00</span> <br />
                   Sunday and holidays:
-                  <span class="text-right">09:00 - 12:00</span>
+                  <span class="text-right">09:00 - 12:00</span> -->
                 </div>
               </div>
               <!-- Col end -->
