--- a/projects.html
+++ b/projects.html
@@ -141,7 +141,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                       <div class="info-box">
                         <div class="info-box-content">
                           <p class="info-box-title">Call Us</p>
-                          <p class="info-box-subtitle">(+91) 98795-93339</p>
+                          <p class="info-box-subtitle">(+91) 98795-93339, (+91) 96383-25676</p>
                         </div>
                       </div>
                     </li>
@@ -150,7 +150,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                         <div class="info-box-content">
                           <p class="info-box-title">Email Us</p>
                           <p class="info-box-subtitle">
-                            info.elephanta@gmail.com
+                            info.elephanta@gmail.com, 9879593339c@gmail.com
                           </p>
                         </div>
                       </div>
@@ -1061,11 +1061,11 @@ FACEBOOK: https://www.facebook.com/themefisher
                   Contact us if you have an emergency, with our Hotline and
                   Contact form.
                   <br /><br />
-                  Monday - Friday:
+                  <!-- Monday - Friday:
                   <span class="text-right">10:00 - 16:00 </span> <br />
                   Saturday: <span class="text-right">12:00 - 15:00</span> <br />
                   Sunday and holidays:
-                  <span class="text-right">09:00 - 12:00</span>
+                  <span class="text-right">09:00 - 12:00</span> -->
                 </div>
               </div>
               <!-- Col end -->
