--- a/projects-single.html
+++ b/projects-single.html
@@ -118,7 +118,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                     <div class="info-box">
                       <div class="info-box-content">
                           <p class="info-box-title">Call Us</p>
-                          <p class="info-box-subtitle">(+91) 98795-93339</p>
+                          <p class="info-box-subtitle">(+91) 98795-93339, (+91) 96383-25676</p>
                       </div>
                     </div>
                   </li>
@@ -126,7 +126,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                     <div class="info-box">
                       <div class="info-box-content">
                           <p class="info-box-title">Email Us</p>
-                          <p class="info-box-subtitle">info.elephanta@gmail.com</p>
+                          <p class="info-box-subtitle">info.elephanta@gmail.com, 9879593339c@gmail.com</p>
                       </div>
                     </div>
                   </li>
