--- a/services.html
+++ b/services.html
@@ -118,7 +118,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                     <div class="info-box">
                       <div class="info-box-content">
                           <p class="info-box-title">Call Us</p>
-                          <p class="info-box-subtitle">(+91) 98795-93339</p>
+                          <p class="info-box-subtitle">(+91) 98795-93339, (+91) 96383-25676</p>
                       </div>
                     </div>
                   </li>
@@ -126,7 +126,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                     <div class="info-box">
                       <div class="info-box-content">
                           <p class="info-box-title">Email Us</p>
-                          <p class="info-box-subtitle">info.elephanta@gmail.com</p>
+                          <p class="info-box-subtitle">info.elephanta@gmail.com, 9879593339c@gmail.com</p>
                       </div>
                     </div>
                   </li>
@@ -429,9 +429,9 @@ FACEBOOK: https://www.facebook.com/themefisher
             <div class="working-hours">
               We work 7 days a week, every day excluding major holidays. Contact us if you have an emergency, with our
               Hotline and Contact form.
-              <br><br> Monday - Friday: <span class="text-right">10:00 - 16:00 </span>
+              <!-- <br><br> Monday - Friday: <span class="text-right">10:00 - 16:00 </span>
               <br> Saturday: <span class="text-right">12:00 - 15:00</span>
-              <br> Sunday and holidays: <span class="text-right">09:00 - 12:00</span>
+              <br> Sunday and holidays: <span class="text-right">09:00 - 12:00</span> -->
             </div>
           </div><!-- Col end -->
 
